--- a/src/hotelcasestudy/booking.form
+++ b/src/hotelcasestudy/booking.form
@@ -222,7 +222,7 @@
     <Container class="javax.swing.JPanel" name="jPanel2">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="32" green="49" red="69" type="rgb"/>
+          <Color blue="e8" green="ea" red="ec" type="rgb"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -270,9 +270,6 @@
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="4f" green="a5" red="e2" type="rgb"/>
-            </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\nejac\OneDrive\Pictures\Screenshots\Screenshot 2025-04-25 185904.png"/>
             </Property>
           </Properties>
         </Component>
