--- a/src/hotelcasestudy/ADMIN_Dashboard.form
+++ b/src/hotelcasestudy/ADMIN_Dashboard.form
@@ -242,7 +242,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="25" green="40" red="67" type="rgb"/>
+              <Color blue="4b" green="64" red="8c" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Liberation Sans" size="12" style="0"/>
